--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "php": "~7.1"
   },
   "require-dev": {
-    "phpmd/phpmd": "~2.6.0"
+    "phpmd/phpmd": "~2.6.0",
+    "squizlabs/php_codesniffer": "~3.3.2"
 
   },
   "autoload": {
